Downgrade Java compatibility to 8 and prepare for Maven Central release
- Update Maven compiler source and target to Java 8.
- Refactor code to ensure Java 8 compatibility:
    - Remove `@java.io.Serial` annotations and corresponding imports.
    - Replace `List.of()` with `Arrays.asList()` in `IFCPeriod.java`.
    - Adjust `instanceof` pattern matching to traditional casting in `IFCDate.java` and `IFCPeriod.java`.
- Add comprehensive Maven metadata including licenses, developer information, and SCM details to `pom.xml`.
- Integrate Maven plugins for generating source and javadoc JARs, and for GPG signing artifacts.
- Configure distribution management for publishing to Maven Central.